--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,9 @@ install_requires =
 	pydantic
 	oteapi-core
 	jsonschema
+	jsonref
     pyyaml
+	ruamel.yaml
     cachecontrol
 setup_requires =
     reentry
@@ -30,10 +32,9 @@ oteapi.function =
 	execflow.aiidacuds/cuds2datanode = execflow.data.cuds:CUDS2DataNodeStrategy
 	execflow.aiidacuds/datanode2cuds = execflow.data.cuds:DataNode2CUDSStrategy
 aiida.workflows = 
-	execflow.declarative = execflow.workflows.declarative_chain:DeclarativeChain
+	execflow.declarative = execflow.workchains.declarative_chain:DeclarativeChain
 
 [flake8]
 ignore = E203, E266, W503
 max-line-length = 88
 max-complexity = 18
-s
