--- a/setup.cfg
+++ b/setup.cfg
@@ -12,8 +12,10 @@ packages = find:
 python_requires = >=3.8,<4
 install_requires =
 	aiida-core
+	aiida-pseudo
 	pydantic
 	oteapi-core
+	oteapi-dlite
 	jsonschema
 	jsonref
     pyyaml
@@ -26,13 +28,36 @@ include_package_data = True
 reentry_register = true
 
 [options.entry_points]
+aiida.data = 
+	execflow.oteapi_pipeline      = execflow.data.oteapi.declarative_pipeline:OTEPipelineData
+	execflow.dataresourceconfig   = execflow.data.oteapi.resourceconfig:ResourceConfigData
+	execflow.filterconfig         = execflow.data.oteapi.filterconfig:FilterConfigData
+	execflow.functionconfig       = execflow.data.oteapi.functionconfig:FunctionConfigData
+	execflow.mappingconfig        = execflow.data.oteapi.mappingconfig:MappingConfigData
+	execflow.transformationconfig = execflow.data.oteapi.transformationconfig:TransformationConfigData
+
 aiida.calculations =
     execflow.data.CUDS2DataNode = execflow.data.cuds:CUDS2DataNode
+	execflow.dataresource_init  = execflow.oteapi.strategies.dataresource:init_dataresource
+	execflow.dataresource_get   = execflow.oteapi.strategies.dataresource:get_dataresource
+	execflow.filter_init        = execflow.oteapi.strategies.filter:init_filter
+	execflow.filter_get         = execflow.oteapi.strategies.filter:get_filter
+	execflow.mapping_init       = execflow.oteapi.strategies.mapping:init_mapping
+	execflow.mapping_get        = execflow.oteapi.strategies.mapping:get_mapping
+	execflow.parse_oteapi_pipeline     = execflow.calculations.parse_oteapi_pipeline:parse_oteapi_pipeline
+	execflow.update_oteapi_session     = execflow.calculations.update_oteapi_session:update_oteapi_session
+
 oteapi.function = 
 	execflow.aiidacuds/cuds2datanode = execflow.data.cuds:CUDS2DataNodeStrategy
 	execflow.aiidacuds/datanode2cuds = execflow.data.cuds:DataNode2CUDSStrategy
+
 aiida.workflows = 
-	execflow.declarative = execflow.workchains.declarative_chain:DeclarativeChain
+	execflow.declarative         = execflow.workchains.declarative_chain:DeclarativeChain
+	execflow.oteapi_pipeline     = execflow.workflows.pipeline:OTEPipeline
+	execflow.function_init       = execflow.oteapi_strategies.function:init_function
+	execflow.function_get        = execflow.oteapi_strategies.function:get_function
+	execflow.transformation_init = execflow.oteapi_strategies.transformation:init_transformation
+	execflow.transformation_get  = execflow.oteapi_strategies.transformation:get_transformation
 
 [flake8]
 ignore = E203, E266, W503
