--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,10 @@ description = ExecFlow part of H2020-OpenModel
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = http://github.com/H2020-OpenModel/ExecFlow
-author = Louis Ponet
+authors = 
+	Louis Ponet
+	SINTEF
+
 keywords = openmodel
 
 [options]
@@ -53,7 +56,7 @@ oteapi.function =
 
 aiida.workflows = 
 	execflow.declarative         = execflow.workchains.declarative_chain:DeclarativeChain
-	execflow.oteapi_pipeline     = execflow.workflows.pipeline:OTEPipeline
+	execflow.oteapi_pipeline     = execflow.workchains.oteapi_pipeline:OTEPipeline
 	execflow.function_init       = execflow.oteapi_strategies.function:init_function
 	execflow.function_get        = execflow.oteapi_strategies.function:get_function
 	execflow.transformation_init = execflow.oteapi_strategies.transformation:init_transformation
