--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ oteapi.function =
 
 aiida.workflows = 
 	execflow.declarative         = execflow.workchains.declarative_chain:DeclarativeChain
-	execflow.oteapi_pipeline     = execflow.workchains.oteapi_pipeline:OTEPipeline
+	execflow.oteapipipeline     = execflow.workchains.oteapi_pipeline:OTEPipeline
 	execflow.function_init       = execflow.oteapi_strategies.function:init_function
 	execflow.function_get        = execflow.oteapi_strategies.function:get_function
 	execflow.transformation_init = execflow.oteapi_strategies.transformation:init_transformation
