Change file2datanode, to file2collection which is passed on in the pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ Source = 'https://github.com/H2020-OpenModel/ExecFlow'
 [project.entry-points.'oteapi.function']
 'execflow.aiidacuds/cuds2datanode' = 'execflow.data.cuds:CUDS2DataNodeStrategy'
 'execflow.aiidacuds/datanode2cuds' = 'execflow.data.cuds:DataNode2CUDSStrategy'
-'execflow.aiidacuds/file2datanode' = 'execflow.data.file2datanode:File2DataNodeStrategy'
+'execflow.aiidacuds/file2collection' = 'execflow.data.file2collection:File2CollectionStrategy'
 
 
 [project.entry-points.'aiida.workflows']
