--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
 	'ruamel.yaml',
     'cachecontrol',
     'chevron',
-    'aiida-shell'
+    'aiida-shell==0.3.0'
 ]
 
 [project.urls]
