--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,3 +115,9 @@ disable = [
     'too-many-locals',
     'use-dict-literal',
 ]
+
+[tool.setuptools.package-data]
+execflow = [
+    "entities/*.json"
+]
+
