--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     'oteapi-core>=0.4.1,<0.4.4',
     'oteapi-dlite>=0.1.4,<0.1.5',
     'DLite-Python>=0.3.20,<0.4.1',
-    'jsonref',
+    'jsonref>=1.1.0,<1.1.1',
     'ruamel.yaml>=0.17.23,<0.17.33',
     'cachecontrol>=0.13.1,<0.13.2',
     'chevron>=0.14.0,<0.14.1',
