--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ classifiers = [
 requires-python = '>=3.8'
 
 dependencies = [
-    'aiida-core>=2.1.0<3',
-    'oteapi-core>=0.4.1,<0.4.4',
+    'aiida-core>=2.1.0,<3',
+    'oteapi-core>=0.4.1,<0.4.5',
     'oteapi-dlite>=0.1.4,<0.1.5',
     'DLite-Python>=0.3.20,<0.4.1',
     'jsonref>=1.1.0,<1.1.1',
