--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -52,6 +52,25 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_DB: test_aiida
+          POSTGRES_PASSWORD: ''
+          POSTGRES_HOST_AUTH_METHOD: trust
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          -   5432:5432
+      rabbitmq:
+          image: rabbitmq:3.8.14-management
+          ports:
+          -   5672:5672
+          -   15672:15672
 
     steps:
     - uses: actions/checkout@v3
@@ -62,7 +81,7 @@ jobs:
         python-version: ${{ matrix.python-version}}
 
     - name: Install system dependencies
-      run: sudo apt update && sudo apt install -y ghostscript
+      run: sudo apt update && sudo apt install -y ghostscript postgresql
 
     - name: Install Python dependencies
       run: |
@@ -76,10 +95,8 @@ jobs:
           fi
         done < requirements_dev.txt
 
-
-
     - name: Test with pytest
-      run: pytest -vvv --cov-report=xml
+      run: tests/tests.sh
 
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.9' && github.repository == 'H2020-OpenModel/ExecFlow'
@@ -91,7 +108,7 @@ jobs:
     - name: Test with optional libs
       run: |
         pip install ase numpy
-        pytest -vvv --cov-report=xml
+        tests/tests.sh
 
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.9' && github.repository == 'H2020-OpenModel/ExecFlow'
@@ -133,7 +150,7 @@ jobs:
         pip install -e .[dev]
 
     - name: Test with pytest
-      run: pytest -vvv --cov-report=xml
+      run: tests/tests.sh
 
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.9' && github.repository == 'H2020-OpenModel/ExecFlow'
@@ -145,7 +162,7 @@ jobs:
     - name: Test with optional libs
       run: |
         pip install ase numpy
-        pytest -vvv --cov-report=xml
+        tests/tests.sh
 
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.9' && github.repository == 'H2020-OpenModel/ExecFlow'
