--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -86,8 +86,9 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install -U pip
-        pip install -U setuptools wheel pytest
+        pip install -U setuptools wheel pytest pytest-cov
         pip install -e .
+        reentry scan
 
         while IFS="" read -r line || [ -n "${line}" ]; do
           if [[ "${line}" =~ ^pre-commit.*$ ]]; then
@@ -149,7 +150,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install -U pip
-        pip install -U setuptools wheel pytest
+        pip install -U setuptools wheel pytest pytest-cov
         pip install -e .[dev]
 
     - name: Setup environment
