--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     'ruamel.yaml>=0.17.23,<0.17.33',
     'cachecontrol>=0.13.1,<0.13.2',
     'chevron>=0.14.0,<0.14.1',
-    'aiida-shell==0.3.0'
+    'aiida-shell==0.3.0',
     'aiida-pseudo>=0.8.0,<2'
 ]
 
