--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install -U pip
-        pip install -U setuptools wheel pytest pytest-cov
+        pip install -U setuptools wheel pytest pytest-cov pgtest
         pip install -e .
 
         while IFS="" read -r line || [ -n "${line}" ]; do
@@ -149,7 +149,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install -U pip
-        pip install -U setuptools wheel pytest pytest-cov
+        pip install -U setuptools wheel pytest pytest-cov pgtest
         pip install -e .[dev]
 
     - name: Setup environment
