--- a/tests/samples/declarative_chain/double_sum.yaml
+++ b/tests/samples/declarative_chain/double_sum.yaml
@@ -4,7 +4,7 @@ steps:
     inputs:
       x: 4
       y: 5
-      code: "bash@localhost"
+      code: bash@localhost
     postprocess:
       - "{{ ctx.current.outputs['sum']|to_ctx('sum') }}"
       - "{{ ctx.current.outputs['sum']|to_results('sum_1') }}"
@@ -12,6 +12,6 @@ steps:
     inputs:
       x: "{{ctx.sum}}"
       y: 5
-      code: "bash@localhost"
+      code: bash@localhost
     postprocess:
       - "{{ ctx.current.outputs['sum'] | to_results('sum_2') }}"
