--- a/tests/samples/exec_wrapper.yaml
+++ b/tests/samples/exec_wrapper.yaml
@@ -13,6 +13,12 @@ steps:
       command: "bc"
       arguments:
         - "bc.in"
+      shelljob:
+        metadata:
+          options:
+            resources:
+              num_mpiprocs_per_machine: 14
+              num_machines: 1
     postprocess:
       - "{{ ctx.current.outputs['stdout']|to_results('stdout') }}"
       - "{{ ctx.current.outputs['stderr']|to_results('stderr') }}"
