added other dlite aiida datanode entities

--- a/tests/samples/exec_wrapper.yaml
+++ b/tests/samples/exec_wrapper.yaml
@@ -19,6 +19,7 @@ steps:
             resources:
               num_mpiprocs_per_machine: 14
               num_machines: 1
+            withmpi: true
     postprocess:
       - "{{ ctx.current.outputs['stdout']|to_results('stdout') }}"
       - "{{ ctx.current.outputs['stderr']|to_results('stderr') }}"
