--- a/D4.5/6_1.yaml
+++ b/D4.5/6_1.yaml
@@ -1,6 +1,6 @@
 ---
 data:
-  "$ref": "file:///home/lponet/Software/pythondev/Demo/data.yaml"
+  "$ref": "file://__DIR__/data.yaml"
 setup:
   - "{{ 1 | to_ctx('nscf_count') }}"
 steps:
