--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     'cachecontrol>=0.13.1,<0.13.2',
     'chevron>=0.14.0,<0.14.1',
     'aiida-shell==0.3.0',
-    'aiida-pseudo>=0.8.0,<2'
+    'aiida-pseudo>=0.8.0,<2',
 ]
 
 [project.urls]
@@ -121,4 +121,10 @@ execflow = [
 ]
 
 [project.optional-dependencies]
-tests = ["pytest~=7.0"]
+dev = [
+    "pre-commit~=3.3",
+    "pylint~=2.17",
+    "pytest~=7.3",
+    "pytest-cov~=4.1",
+    "pgtest~=1.3",
+]
