--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
   # To get an overview of them all as well as the ones used here, please see
   # https://github.com/pre-commit/pre-commit-hooks#hooks-available
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
     - id: end-of-file-fixer
       exclude: ^.*\.(drawio|svg)$
@@ -22,7 +22,7 @@ repos:
   # isort is a tool to sort and group import statements in Python files
   # It works on files in-place
   - repo: https://github.com/timothycrosley/isort
-    rev: 5.11.4
+    rev: 5.13.2
     hooks:
     - id: isort
       args: ["--profile", "black", "--filter-files", "--skip-gitignore"]
@@ -30,7 +30,7 @@ repos:
   # Black is a code style and formatter
   # It works on files in-place
   - repo: https://github.com/ambv/black
-    rev: 22.12.0
+    rev: 24.2.0
     hooks:
     - id: black
 
@@ -38,7 +38,7 @@ repos:
   # More information can be found in its documentation:
   # https://bandit.readthedocs.io/en/latest/
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.4
+    rev: 1.7.7
     hooks:
     - id: bandit
       args: ["-r"]
@@ -50,13 +50,14 @@ repos:
   # The project's documentation can be found at:
   # https://mypy.readthedocs.io/en/stable/index.html
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.991
+    rev: v1.8.0
     hooks:
     - id: mypy
       exclude: ^tests/.*$
       additional_dependencies:
         - "types-PyYAML"
-        - "pydantic"
+        - "pydantic<2"
+        - "types-requests"
 
   - repo: local
     hooks:
