--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,9 @@ name = 'execflow'
 line-length = 120
 fail-on-change = true
 
+[tool.black]
+line-length = 120
+
 [tool.isort]
 force_sort_within_sections = true
 include_trailing_comma = true
