--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,32 +59,32 @@ repos:
         - "pydantic<2"
         - "types-requests"
 
-  - repo: local
-    hooks:
-    # pylint is a Python linter
-    # It is run through the local environment to ensure external packages can be
-    # imported without issue.
-    # For more information about pylint see its documentation at:
-    # https://pylint.pycqa.org/en/latest/
-    - id: pylint
-      name: pylint
-      entry: pylint
-      args:
-      # - "--rcfile=pyproject.toml"
-      - "--extension-pkg-whitelist='pydantic'"
-      language: python
-      types: [python]
-      require_serial: true
-      files: ^.*$
-      exclude: ^tests/.*$
-    - id: pylint-tests
-      name: pylint - tests
-      entry: pylint
-      args:
-      # - "--rcfile=pyproject.toml"
-      - "--extension-pkg-whitelist='pydantic'"
-      - "--disable=import-outside-toplevel,redefined-outer-name"
-      language: python
-      types: [python]
-      require_serial: true
-      files: ^tests/.*$
+  # - repo: local
+  #   hooks:
+  #   # pylint is a Python linter
+  #   # It is run through the local environment to ensure external packages can be
+  #   # imported without issue.
+  #   # For more information about pylint see its documentation at:
+  #   # https://pylint.pycqa.org/en/latest/
+  #   - id: pylint
+  #     name: pylint
+  #     entry: pylint
+  #     args:
+  #     # - "--rcfile=pyproject.toml"
+  #     - "--extension-pkg-whitelist='pydantic'"
+  #     language: python
+  #     types: [python]
+  #     require_serial: true
+  #     files: ^.*$
+  #     exclude: ^tests/.*$
+  #   - id: pylint-tests
+  #     name: pylint - tests
+  #     entry: pylint
+  #     args:
+  #     # - "--rcfile=pyproject.toml"
+  #     - "--extension-pkg-whitelist='pydantic'"
+  #     - "--disable=import-outside-toplevel,redefined-outer-name"
+  #     language: python
+  #     types: [python]
+  #     require_serial: true
+  #     files: ^tests/.*$
