--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,24 +13,24 @@ description = "openmodel execflow"
 classifiers = [
     'License :: OSI Approved :: MIT License',
     'Programming Language :: Python',
-    'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
 ]
-requires-python = '>=3.8'
+requires-python = '>=3.9'
 
 dependencies = [
     'aiida-core>=2.1.0,<3',
-    'oteapi-core>=0.4.1,<0.4.5',
-    'oteapi-dlite>=0.1.4,<0.1.7',
-    'DLite-Python>=0.3.20,<0.4.6',
-    'jsonref>=1.1.0,<1.1.1',
-    'ruamel.yaml>=0.17.23,<0.17.33',
-    'cachecontrol>=0.13.1,<0.13.2',
-    'chevron>=0.14.0,<0.14.1',
-    'aiida-shell==0.3.0',
-    'aiida-pseudo>=0.8.0,<2',
+    'oteapi-core>=0.6.1,<1',
+    # 'oteapi-dlite>0.1.6,<1',  # update to the latest version of oteapi-dlite once the migration to pydantic v2 has been implemented and released
+    'oteapi-dlite @ git+https://github.com/EMMC-ASBL/oteapi-dlite.git@cwa/close-187-migrate-to-pydantic-v2',
+    'DLite-Python>=0.5.1,<1',
+    'jsonref~=1.1.0',
+    # 'ruamel.yaml>=0.18.23,<0.17.33',
+    'cachecontrol>=0.14.0,<1',
+    'chevron>=0.14.0,<1',
+    'aiida-shell>=0.6.0,<1',
+    'aiida-pseudo>=1.5.0,<2',
 ]
 
 [project.urls]
@@ -125,9 +125,9 @@ execflow = [
 
 [project.optional-dependencies]
 dev = [
-    "pre-commit~=3.3",
-    "pylint~=2.17",
-    "pytest~=7.3",
+    "pre-commit~=3.6",
+    "pylint~=3.0",
+    "pytest~=8.0",
     "pytest-cov~=4.1",
     "pgtest~=1.3",
 ]
