Run bump-pydantic and use new methods
Also use typing.Annotated where possible.

Remove all __pycache__ folders and *.pyc files.
Update .gitignore

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,7 +56,7 @@ repos:
       exclude: ^tests/.*$
       additional_dependencies:
         - "types-PyYAML"
-        - "pydantic<2"
+        - "pydantic>=2"
         - "types-requests"
 
   # - repo: local
