--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,15 @@ disable = [
     'use-dict-literal',
 ]
 
+[tool.mypy]
+python_version = "3.9"
+ignore_missing_imports = true
+scripts_are_modules = true
+warn_unused_configs = true
+show_error_codes = true
+allow_redefinition = true
+plugins = ["pydantic.mypy"]
+
 [tool.setuptools.package-data]
 execflow = [
     "entities/*.json"
