--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -28,6 +28,12 @@ jobs:
         --rcfile=pyproject.toml --extension-pkg-whitelist='pydantic' --disable=C0415,W0621,import-error --recursive=yes tests
 
       run_safety: true
+      # Ignore some safety warnings:
+      # - 63227: paramiko. Subdependency of aiida-core.
+      # - 59901: aio-pika. Subdependency of aiida-core.
+      safety_options: |
+        --ignore 63227
+        --ignore 59901
 
       # Build package
       run_build_package: true
