--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     'chevron>=0.14.0,<1',
     'DLite-Python>=0.5.1,<1',
     'jsonref==1.1.0',
-    # 'jsonschema~=4.22',  # dependency from aiida-core 2.4
+    'jsonschema>=3.2.0,<5',
     'oteapi-core>=0.6.1,<1',
     'oteapi-dlite>=0.2.0,<1',
 ]
