--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,14 @@ dependencies = [
     'aiida-pseudo>=1.5.0,<2',
     'jsonref>=1.1.0,<1.1.1',
     'ruamel.yaml>=0.17.23,<0.17.33',
+]
 
+[project.optional-dependencies]
+dev = [
+    "pre-commit~=3.6",
+    "pytest~=8.0",
+    "pytest-cov~=4.1",
+    "pgtest~=1.3",
 ]
 
 [project.urls]
@@ -97,28 +104,6 @@ ignore = [
     'D213'
 ]
 
-[tool.pylint.format]
-max-line-length = 120
-
-[tool.pylint.tool-check]
-generated-members = 'self.exit_codes.*'
-
-[tool.pylint.messages_control]
-disable = [
-    'duplicate-code',
-    'fixme',
-    'inconsistent-return-statements',
-    'import-outside-toplevel',
-    'locally-disabled',
-    'logging-format-interpolation',
-    'no-else-raise',
-    'too-many-arguments',
-    'too-many-ancestors',
-    'too-many-branches',
-    'too-many-locals',
-    'use-dict-literal',
-]
-
 [tool.mypy]
 python_version = "3.9"
 ignore_missing_imports = true
@@ -133,11 +118,38 @@ execflow = [
     "entities/*.json"
 ]
 
-[project.optional-dependencies]
-dev = [
-    "pre-commit~=3.6",
-    "pylint~=3.0",
-    "pytest~=8.0",
-    "pytest-cov~=4.1",
-    "pgtest~=1.3",
+[tool.ruff.lint]
+extend-select = [
+    "E",  # pycodestyle
+    "F",  # Pyflakes
+    "B",  # flake8-bugbear
+    "I",  # isort
+    "BLE",  # flake8-blind-except
+    "ARG",  # flake8-unused-arguments
+    "C4",  # flake8-comprehensions
+    "ICN",  # flake8-import-conventions
+    "G",  # flake8-logging-format
+    "PGH",  # pygrep-hooks
+    "PIE",  # flake8-pie
+    "PL",  # pylint
+    "PT",  # flake8-pytest-style
+    "PTH",  # flake8-use-pathlib
+    "RET",  # flake8-return
+    "RUF",  # Ruff-specific
+    "SIM",  # flake8-simplify
+    "YTT",  # flake8-2020
+    "EXE",  # flake8-executable
+    "PYI",  # flake8-pyi
+]
+ignore = [
+    "PLR",  # Design related pylint codes
+    "PLW0127",  # pylint: Self-assignment of variables
+]
+
+# Import __future__.annotations for all Python files.
+isort.required-imports = ["from __future__ import annotations"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**" = [
+    # "BLE",  # flake8-blind-except
 ]
