Use ruff linting (#28)
Remove pylint and isort - use ruff.

Update pre-commit hooks.

Update code base according to new and updated hooks.

Add pytest configuration.

Use eval-type-backport for Python 3.9.

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -12,20 +12,17 @@ jobs:
     name: External
     uses: SINTEF/ci-cd/.github/workflows/ci_tests.yml@v2.7.2
     with:
+      # Generic
+      install_extras: "[dev]"
+
       # pre-commit
       run_pre-commit: true
       python_version_pre-commit: "3.9"
-      install_extras: "[dev]"
-      skip_pre-commit_hooks: pylint,pylint-strategies,pylint-tests
 
       # pylint & safety
       python_version_pylint_safety: "3.9"
 
       run_pylint: false
-      pylint_runs: |
-        --rcfile=pyproject.toml --ignore-paths=oteapi/strategies/,tests/ --extension-pkg-whitelist='pydantic' *.py oteapi
-        --rcfile=pyproject.toml --extension-pkg-whitelist='pydantic' --disable=R,C oteapi/strategies
-        --rcfile=pyproject.toml --extension-pkg-whitelist='pydantic' --disable=C0415,W0621,import-error --recursive=yes tests
 
       run_safety: true
       # Ignore some safety warnings:
