--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     'cachecontrol>=0.14.0,<1',
     'chevron>=0.14.0,<1',
     'DLite-Python>=0.5.1,<1',
+    'eval-type-backport>=0.2.0,<1; python_version < "3.10"',
     'jsonref==1.1.0',
     'jsonschema>=3.2.0,<5',
     'oteapi-core>=0.6.1,<1',
@@ -94,9 +95,7 @@ fail-on-change = true
 line-length = 120
 
 [tool.isort]
-force_sort_within_sections = true
 include_trailing_comma = true
-line_length = 120
 multi_line_output = 3  # this configuration is compatible with yapf
 
 [tool.pydocstyle]
@@ -105,28 +104,6 @@ ignore = [
     'D202',
     'D203',
     'D213'
-]
-
-[tool.pylint.format]
-max-line-length = 120
-
-[tool.pylint.tool-check]
-generated-members = 'self.exit_codes.*'
-
-[tool.pylint.messages_control]
-disable = [
-    'duplicate-code',
-    'fixme',
-    'inconsistent-return-statements',
-    'import-outside-toplevel',
-    'locally-disabled',
-    'logging-format-interpolation',
-    'no-else-raise',
-    'too-many-arguments',
-    'too-many-ancestors',
-    'too-many-branches',
-    'too-many-locals',
-    'use-dict-literal',
 ]
 
 [tool.mypy]
@@ -141,4 +118,60 @@ plugins = ["pydantic.mypy"]
 [tool.setuptools.package-data]
 execflow = [
     "entities/*.json"
+]
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+extend-select = [
+    "E",  # pycodestyle
+    "F",  # Pyflakes
+    "B",  # flake8-bugbear
+    "I",  # isort
+    "BLE",  # flake8-blind-except
+    "ARG",  # flake8-unused-arguments
+    "C4",  # flake8-comprehensions
+    "ICN",  # flake8-import-conventions
+    "G",  # flake8-logging-format
+    "PGH",  # pygrep-hooks
+    "PIE",  # flake8-pie
+    "PL",  # pylint
+    "PT",  # flake8-pytest-style
+    "PTH",  # flake8-use-pathlib
+    "RET",  # flake8-return
+    "RUF",  # Ruff-specific
+    "SIM",  # flake8-simplify
+    "YTT",  # flake8-2020
+    "EXE",  # flake8-executable
+    "PYI",  # flake8-pyi
+    "FLY",  # flynt
+]
+ignore = [
+    "PLR",  # Design related pylint codes
+    "PLW0127",  # pylint: Self-assignment of variables
+]
+
+[tool.ruff.lint.isort]
+# Import __future__.annotations for all Python files.
+required-imports = ["from __future__ import annotations"]
+force-sort-within-sections = true
+
+[tool.pytest.ini_options]
+minversion = "8.2"
+addopts = "-rs --cov=execflow --cov-report=term-missing:skip-covered --no-cov-on-fail"
+filterwarnings = [
+    # Treat all warnings as errors
+    "error",
+
+    # Ignore warnings from the aiida-core package
+    "ignore::UserWarning:aiida.*",
+    "ignore::aiida.common.warnings.AiidaDeprecationWarning:",
+
+    # Ignore warnings from the SQLAlchemy package
+    "ignore::sqlalchemy.exc.SAWarning:",
+
+    # Ignore generic warnings
+    "ignore::ResourceWarning:",
+    "ignore::DeprecationWarning:",
 ]
