--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -29,10 +29,12 @@ jobs:
       # - 63227: paramiko. Subdependency of aiida-core.
       # - 59901: aio-pika. Subdependency of aiida-core.
       # - 65193: paramiko. Subdependency of aiida-core.
+      # - 70612: Jinja2: dependecy of aiida-core.
       safety_options: |
         --ignore=63227
         --ignore=59901
         --ignore=65193
+        --ignore=70612
 
       # Build package
       run_build_package: true
