--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 requires-python = '>=3.9,<3.12'
 
 dependencies = [
-    'aiida-core>=2.1,<2.4',
+    'aiida-core~=2.1',
     'aiida-pseudo~=1.5',
     'aiida-shell>=0.6.0,<1',
     'cachecontrol>=0.14.0,<1',
