--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ requires-python = '>=3.9,<3.12'
 
 dependencies = [
     'aiida-core~=2.1,<2.2',
+    'paramiko~=2.7,>=2.7.2,<2.8',
     'aiida-pseudo~=1.5',
     'aiida-shell>=0.6.0,<1',
     'cachecontrol>=0.14.0,<1',
