--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,8 @@ classifiers = [
 requires-python = '>=3.9,<3.12'
 
 dependencies = [
-    'aiida-core~=2.1,<2.2',
-    'paramiko~=2.7,>=2.7.2,<2.8',
-    'aiida-pseudo~=1.5',
+    'aiida-core~=2.4.0',
+    'aiida-pseudo~=1.5.0',
     'aiida-shell>=0.6.0,<1',
     'cachecontrol>=0.14.0,<1',
     'chevron>=0.14.0,<1',
