--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ requires-python = '>=3.9,<3.12'
 
 dependencies = [
     'aiida-core~=2.4.0',
-    'paramiko~=2.7.1',
+    'cryptography~=42.0',
     'aiida-pseudo~=1.5.0',
     'aiida-shell>=0.6.0,<1',
     'cachecontrol>=0.14.0,<1',
