New safety from sqlachemy

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -30,11 +30,13 @@ jobs:
       # - 59901: aio-pika. Subdependency of aiida-core.
       # - 65193: paramiko. Subdependency of aiida-core.
       # - 70612: Jinja2: dependecy of aiida-core.
+      # - 51668: sqalchemy: dependecy of aiida-core.
       safety_options: |
         --ignore=63227
         --ignore=59901
         --ignore=65193
         --ignore=70612
+        --ignore=51668
 
       # Build package
       run_build_package: true
