--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 requires-python = '>=3.9,<3.12'
 
 dependencies = [
-    'aiida-core~=2.4',
+    'aiida-core==2.4.3',
     'cryptography~=42.0',
     'aiida-pseudo~=1.5.0',
     'aiida-shell>=0.6.0,<1',
