--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     'aiida-core==2.4.3',
     'cryptography~=42.0',
     'aiida-pseudo~=1.5.0',
-    'aiida-shell>=0.6.0,<1',
+    'aiida-shell~=0.6.0',
     'cachecontrol>=0.14.0,<1',
     'chevron>=0.14.0,<1',
     'DLite-Python>=0.5.1,<1',
